# nbot

./: .gitignore  Cargo.toml  nbotdb.session.sql
.cargo/: config.toml
.sqlx/: query-8245d50b773c0177ddd5c17647f9320140780291007af5ea290c76f29a096a90.json  query-e9ac8629f61cdf7a06570c491cf47ab7c2a4e4c05aa64cd3b81c23a82b02da17.json
migrations/: 20240328204539_member.sql  20240404165733_member.sql
nbot-macros/: Cargo.toml
nbot-macros/src/: lib.rs
src/: main.rs  process_event.rs
src/commands/: credits.rs  hello_command.rs  mod.rs
