[package]
name = "nbot"
version = "0.1.0"
edition = "2021"


[dependencies]
dotenvy_macro = "0.15.7"
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
itertools = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }


# Twilight
twilight-model = "0.15.4"
twilight-gateway = { version = "0.15.4", features = ["simd-json"] }
twilight-cache-inmemory = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
twilight-mention = "0.15.3"
twilight-interactions = "0.15.2"
twilight-http = "0.15.4"
inventory = "0.3.15"
futures = "0.3.30"
async-trait = "0.1.79"

[dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio", "macros", "postgres", "tls-rustls"]

[dependencies.nbot-macros]
path = "nbot-macros"
